--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -63,6 +63,9 @@
       href: cli-samples.md
     - name: PowerShell
       href: powershell-samples.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-samples.md
 - name: 概念
   items:
     - name: Azure 资源管理器
@@ -81,6 +84,8 @@
           href: ../virtual-network/virtual-network-optimize-network-bandwidth.md?toc=%2fazure%2fvirtual-machine-scale-sets%2fwindows%2ftoc.json
         - name: 管理规模集中的容错域
           href: virtual-machine-scale-sets-manage-fault-domains.md
+    - name: 映像
+      href: shared-image-galleries.md
     - name: VM 类型和大小
       href: ../virtual-machines/windows/sizes.md
       maintainContext: true
@@ -184,6 +189,51 @@
           href: virtual-machine-scale-sets-design-overview.md
         - name: 了解实例 ID
           href: virtual-machine-scale-sets-instance-ids.md
+    - name: 使用映像
+      displayName: 'SIG, AMI, image'
+      items:
+        - name: 共享映像库
+          items:
+            - name: PowerShell
+              items:
+                - name: 创建库
+                  href: ../virtual-machines/shared-images-powershell.md
+                - name: 创建映像
+                  items:
+                    - name: 从 VM
+                      href: ../virtual-machines/image-version-vm-powershell.md
+                    - name: 从托管映像迁移
+                      href: ../virtual-machines/image-version-managed-image-powershell.md
+                    - name: 从另一个库复制
+                      href: ../virtual-machines/image-version-another-gallery-powershell.md
+                - name: 创建规模集
+                  items:
+                    - name: 专用
+                      href: instance-specialized-image-version-powershell.md
+                    - name: 通用
+                      href: instance-generalized-image-version-powershell.md
+                - name: 更新映像资源
+                  href: ../virtual-machines/update-image-resources-powershell.md
+            - name: CLI
+              items:
+                - name: 创建库
+                  href: ../virtual-machines/shared-images-cli.md
+                - name: 创建映像
+                  items:
+                    - name: 从 VM
+                      href: ../virtual-machines/image-version-vm-cli.md
+                    - name: 从托管映像迁移
+                      href: ../virtual-machines/image-version-managed-image-cli.md
+                    - name: 从另一个库复制
+                      href: ../virtual-machines/image-version-another-gallery-cli.md
+                - name: 创建规模集
+                  items:
+                    - name: 专用
+                      href: instance-specialized-image-version-cli.md
+                    - name: 通用
+                      href: instance-generalized-image-version-cli.md
+                - name: 更新映像资源
+                  href: ../virtual-machines/update-image-resources-cli.md
     - name: 创建模板
       items:
         - name: 了解规模集模板
