--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -8,8 +8,6 @@
       href: overview.md
     - name: 比较消息服务
       href: compare-messaging-services.md
-    - name: 高级层级和基本层级
-      href: premium-basic-tiers.md
 - name: 快速入门
   expanded: true
   items:
@@ -166,23 +164,15 @@
     - name: 监视和故障排除
       items:
         - name: 诊断日志
-          href: null
+          href: diagnostic-logs.md
         - name: 指标
           href: metrics.md
 - name: 操作指南
   items:
-    - name: 配置专用终结点（预览版）
-      href: configure-private-endpoints.md
-    - name: 配置 IP 防火墙（预览版）
-      href: configure-firewall.md
-    - name: 更新定价层
-      href: update-tier.md
     - name: 发布到自定义主题
       href: post-to-custom-topic.md
     - name: 在 HTTP 终结点接收事件
       href: receive-events.md
-    - name: 通过 AAD 保护 WebHook
-      href: secure-webhook-delivery.md
     - name: 死信与重试
       href: manage-event-delivery.md
     - name: 筛选事件
@@ -201,6 +191,14 @@
       href: custom-disaster-recovery.md
     - name: 跟踪异步 REST 操作
       href: ../azure-resource-manager/management/async-operations.md?toc=%2fazure%2fevent-grid%2ftoc.json
+    - name: 安全
+      items:
+        - name: 配置专用终结点（预览版）
+          href: configure-private-endpoints.md
+        - name: 配置 IP 防火墙（预览版）
+          href: configure-firewall.md
+        - name: 通过 AAD 保护 WebHook
+          href: secure-webhook-delivery.md
     - name: 疑难解答
       items:
         - name: 启用诊断日志
