--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -35,6 +35,10 @@
       href: ../common/storage-account-options.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Azure 文件共享快照
       href: storage-snapshots-files.md
+    - name: 数据冗余
+      href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+    - name: 灾难恢复和故障转移
+      href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: 可伸缩性和性能目标
       href: storage-files-scale-targets.md
     - name: 基于标识的身份验证和授权
@@ -114,10 +118,18 @@
           href: storage-sync-files-server-endpoint.md
         - name: 管理 Azure 独立云中的存储
           href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: 更改复制数据的方式
-          href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: 启动帐户故障转移
-          href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: 管理数据冗余
+          items:
+            - name: 更改复制数据的方式
+              href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: 设计具有高可用性的应用程序
+              href: ../common/geo-redundant-design.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: 管理灾难恢复
+          items:
+            - name: 检查“上次同步时间”属性
+              href: ../common/last-sync-time-get.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: 启动帐户故障转移
+              href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: 监视
       items:
         - name: 监视 Azure 文件同步
@@ -188,8 +200,6 @@
           href: storage-sync-files-troubleshoot.md
         - name: 关于删除 Azure 文件存储的疑难解答
           href: storage-troubleshoot-cannot-delete-files-azure-file-share.md
-        - name: 恢复删除的存储帐户
-          href: storage-how-to-recover-deleted-account.md
 - name: 参考
   items:
     - name: Azure PowerShell（存储）
