--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -49,10 +49,14 @@
       items:
         - name: 创建工作负荷分类器
           items:
+            - name: 门户
+              href: quickstart-create-a-workload-classifier-portal.md
             - name: T-SQL
               href: quickstart-create-a-workload-classifier-tsql.md
         - name: 创建工作负荷隔离
           items:
+            - name: 门户
+              href: quickstart-configure-workload-isolation-portal.md
             - name: T-SQL
               href: quickstart-configure-workload-isolation-tsql.md
     - name: 暂停和恢复
@@ -360,7 +364,7 @@
         - name: 构建仪表板和报表
           items:
             - name: 使用 Power BI 进行可视化
-              href: sql-data-warehouse-get-started-visualize-with-power-bi.md
+              href: /power-bi/service-azure-sql-data-warehouse-with-direct-connect.md
     - name: 疑难解答
       items:
         - name: 连接
