--- a/articles/azure-resource-manager/templates/toc.yml
+++ b/articles/azure-resource-manager/templates/toc.yml
@@ -46,6 +46,8 @@
           href: ../../governance/policy/assign-policy-template.md?toc=/azure/azure-resource-manager/templates/toc.json
         - name: 服务总线消息传送
           href: ../../service-bus-messaging/service-bus-resource-manager-namespace-queue.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: Site Recovery
+          href: ../../site-recovery/quickstart-create-vault-template.md?toc=/azure/azure-resource-manager/templates/toc.json
         - name: SQL 数据库
           href: ../../sql-database/sql-database-single-database-get-started-template.md?toc=/azure/azure-resource-manager/templates/toc.json
         - name: 虚拟机规模集 - Linux
@@ -247,6 +249,8 @@
       items:
         - name: 使用管道的 VS 项目
           href: add-template-to-azure-pipelines.md
+        - name: 部署 - GitHub Actions
+          href: deploy-github-actions.md
     - name: 导出模板
       href: export-template-portal.md
     - name: 查看部署历史记录
