--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -90,7 +90,7 @@
             - name: 1 - 使应用程序具有高可用性
               href: storage-create-geo-redundant-storage.md
             - name: 2 - 模拟从主要区域读取数据时出现的故障
-              href: storage-simulate-failure-ragrs-account-app.md
+              href: simulate-primary-region-failure.md
         - name: 使用 Azure Key Vault 加密和解密 Blob
           href: storage-encrypt-decrypt-blobs-key-vault.md
     - name: 示例
@@ -146,13 +146,17 @@
             - name: 使用 Azure 专用终结点
               href: ../common/storage-private-endpoints.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 数据冗余
+          href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: 数据保护
           items:
-            - name: 数据冗余
-              href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 灾难恢复和故障转移
-              href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 设计具有高可用性的应用程序
-              href: ../common/storage-designing-ha-apps-with-ragrs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 版本控制
+              href: versioning-overview.md
+            - name: 软删除
+              href: soft-delete-overview.md
+            - name: 快照
+              href: snapshots-overview.md
+            - name: 更改源
+              href: storage-blob-change-feed.md
         - name: 访问层和性能层
           items:
             - name: 访问层级
@@ -163,6 +167,8 @@
               href: storage-blob-performance-tiers.md
             - name: 管理 Azure Blob 存储生命周期
               href: storage-lifecycle-management-concepts.md
+        - name: 灾难恢复和故障转移
+          href: ../common/storage-disaster-recovery-guidance.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 性能、缩放和成本优化
           items:
             - name: 性能和可伸缩性清单
@@ -247,8 +253,6 @@
                   href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 事件处理
           href: storage-blob-event-overview.md
-        - name: 更改源
-          href: storage-blob-change-feed.md
         - name: 页 Blob 功能
           href: storage-blob-pageblob-overview.md
         - name: 静态网站
@@ -282,8 +286,6 @@
               href: storage-blob-properties-metadata.md
             - name: 复制 Blob (.NET)
               href: storage-blob-copy.md
-            - name: 创建和管理 Blob 快照 (.NET)
-              href: storage-blob-snapshots.md
         - name: 保护 Blob 数据
           items:
             - name: 授予对 Blob 数据的访问权限
@@ -370,16 +372,28 @@
                   href: ../common/storage-security-tls.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 设置和管理不可变性策略
               href: storage-blob-immutability-policies-manage.md
-        - name: 更改复制数据的方式
-          href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 灾难恢复
+        - name: 管理数据冗余
+          items:
+            - name: 更改复制数据的方式
+              href: ../common/redundancy-migration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 设计具有高可用性的应用程序
+              href: ../common/geo-redundant-design.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: 保护数据
+          items:
+            - name: 启用 Blob 版本控制
+              href: versioning-enable.md
+            - name: 启用软删除
+              href: soft-delete-enable.md
+            - name: 创建快照 (.NET)
+              href: snapshots-manage-dotnet.md
+            - name: 处理更改源日志
+              href: storage-blob-change-feed-how-to.md
+        - name: 管理灾难恢复
           items:
             - name: 检查“上次同步时间”属性
               href: ../common/last-sync-time-get.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 启动帐户故障转移
               href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 恢复已删除的 Blob
-              href: storage-blob-soft-delete.md
         - name: 使用存储模拟器
           items:
             - name: 使用 Azurite 开放源代码模拟器
@@ -398,8 +412,6 @@
           href: storage-blob-event-quickstart.md
         - name: 利用 Blob 索引
           href: storage-blob-index-how-to.md
-        - name: 处理更改源日志
-          href: storage-blob-change-feed-how-to.md
         - name: 传输数据
           items:
             - name: AzCopy
