commit translated contents

--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -35,8 +35,9 @@
       href: powershell-samples.md
     - name: 资源管理器模板
       href: template-samples.md
-    - name: Azure Policy 模板
-      href: policy-samples.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 业务连续性
@@ -390,7 +391,7 @@
     - name: Azure PowerShell
       href: /powershell/module/az.network
     - name: .NET
-      href: /api/overview/azure/virtual-network
+      href: /dotnet/api/overview/azure/virtual-network
     - name: Java
       href: /java/api/
     - name: Node.js
