--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -56,12 +56,10 @@
             - name: 自动训练 ML 模型
               displayName: 'automl, automated, auto ml,'
               href: tutorial-auto-train-models.md
-        - name: 机器学习管道（高级）
-          items:
-            - name: 对分类模型进行批量评分
-              displayName: pipelines
-              href: tutorial-pipeline-batch-scoring-classification.md
-        - name: 从试验到生产
+        - name: 带有管道的批处理评分模型
+          displayName: pipelines
+          href: tutorial-pipeline-batch-scoring-classification.md
+        - name: 准备适用于生产环境的代码
           displayName: 'mlops, mlopspython, production'
           href: tutorial-convert-ml-experiment-to-production.md
     - name: R SDK
@@ -88,54 +86,63 @@
     - name: 端到端 MLOps 示例
       href: 'https://github.com/microsoft/MLOps'
     - name: 开放数据集（公共）
-      href: /azure/open-datasets/samples?context=azure/machine-learning/service/context/ml-context
+      href: /azure/open-datasets/samples?context=azure/machine-learning/context/ml-context
 - name: 概念
   items:
     - name: 计划和管理成本
       href: concept-plan-manage-cost.md
+    - name: 设计器（拖放 ML）
+      items:
+        - name: 设计器概述
+          displayName: studio
+          href: concept-designer.md
+        - name: 算法备忘单
+          href: /azure/machine-learning/algorithm-cheat-sheet
+        - name: 如何选择算法
+          href: /azure/machine-learning/how-to-select-algorithms
+    - name: 自动化机器学习
+      items:
+        - name: 自动化 ML 概述
+          displayName: 'automl, auto ml'
+          href: concept-automated-ml.md
+        - name: 过度拟合与不均衡的数据
+          displayName: 'automl, auto ml, risks'
+          href: concept-manage-ml-pitfalls.md
     - name: 工作区
       href: concept-workspace.md
     - name: 环境
       href: concept-environments.md
-    - name: 数据引入
-      href: concept-data-ingestion.md
-    - name: 数据访问
-      href: concept-data.md
-    - name: 模型定型
-      displayName: 'run config, estimator, machine learning pipeline, ml pipeline, train model'
-      href: concept-train-machine-learning-model.md
-    - name: 分布式训练
-      displayName: 'parallellization, deep learning, deep neural network, dnn'
-      href: concept-distributed-training.md
-    - name: 模型管理 (MLOps)
-      displayName: 'deploy, deployment, publish, production, operationalize, operationalization'
-      href: concept-model-management-and-deployment.md
-    - name: 可解释性
-      displayName: explainability
-      href: how-to-machine-learning-interpretability.md
-    - name: 设计器：无代码 ML
-      displayName: studio
-      href: concept-designer.md
-    - name: 算法备忘单
-      href: /azure/machine-learning/algorithm-cheat-sheet
-    - name: 如何选择算法
-      href: /azure/machine-learning/how-to-select-algorithms
-    - name: 自动化机器学习
-      displayName: 'automl, auto ml'
-      href: concept-automated-ml.md
-    - name: 过度拟合与不均衡的数据
-      displayName: 'automl, auto ml, risks'
-      href: concept-manage-ml-pitfalls.md
     - name: 计算实例
       displayName: 'resource, dsvm, Data Science Virtual Machine'
       href: concept-compute-instance.md
     - name: 计算目标
       displayName: 'resource, dsvm, AKS, kubernetes, amlcompute, Data Science Virtual Machine, local, cluster, ACI, container instance, ADB, Databricks, data lake, lake, HDI, HDInsight'
       href: concept-compute-target.md
+    - name: 数据
+      items:
+        - name: 数据访问
+          href: concept-data.md
+        - name: 数据引入
+          href: concept-data-ingestion.md
+    - name: 模型定型
+      displayName: 'run config, estimator, machine learning pipeline, ml pipeline, train model'
+      href: concept-train-machine-learning-model.md
+    - name: 分布式训练
+      displayName: 'parallellization, deep learning, deep neural network, dnn'
+      href: concept-distributed-training.md
+    - name: 深度学习
+      displayName: 'deep learning vs machine learning, deep learning, vs, versus'
+      href: concept-deep-learning-vs-machine-learning.md
+    - name: 模型管理 (MLOps)
+      displayName: 'deploy, deployment, publish, production, operationalize, operationalization'
+      href: concept-model-management-and-deployment.md
+    - name: 模型可移植性 (ONNX)
+      href: concept-onnx.md
+    - name: 模型可解释性
+      displayName: explainability
+      href: how-to-machine-learning-interpretability.md
     - name: ML 管道
       href: concept-ml-pipelines.md
-    - name: ONNX
-      href: concept-onnx.md
     - name: 企业就绪情况和安全性
       items:
         - name: 企业安全性
@@ -165,11 +172,6 @@
           href: how-to-setup-authentication.md
         - name: 监视 Azure 机器学习
           href: monitor-azure-machine-learning.md
-    - name: 事件网格集成
-      href: concept-event-grid-integration.md
-    - name: 深度学习
-      displayName: 'deep learning vs machine learning, deep learning, vs, versus'
-      href: concept-deep-learning-vs-machine-learning.md
 - name: 操作指南
   items:
     - name: 创建并管理工作区
@@ -188,6 +190,8 @@
         - name: 设置开发环境
           displayName: 'local, remote, azure notebooks, notebook, Jupyter, dsvm, Databricks, ADB'
           href: how-to-configure-environment.md
+        - name: 运行 Jupyter Notebook
+          href: how-to-run-jupyter-notebooks.md
         - name: 设置软件环境
           displayName: 'pip, Conda, anaconda'
           href: how-to-use-environments.md
@@ -269,14 +273,14 @@
           href: how-to-train-keras.md
         - name: PyTorch
           href: how-to-train-pytorch.md
-    - name: 解释模型
+    - name: 解释和说明模型
       displayName: interpretability
       items:
         - name: 解释 ML 模型
-          displayName: 'SDK, interpret'
+          displayName: 'SDK, interpret, explain, explanability, interpretability'
           href: how-to-machine-learning-interpretability-aml.md
         - name: 解释自动化 ML 模型
-          displayName: 'SDK, interpret, automl'
+          displayName: 'SDK, interpret, interpret, explain, explanability, interpretability, automated ML, automl, auto ml'
           href: how-to-machine-learning-interpretability-automl.md
     - name: 自动化机器学习
       displayName: 'automl, auto ml'
@@ -295,6 +299,9 @@
         - name: 自动训练预测模型
           displayName: time series
           href: how-to-auto-train-forecast.md
+        - name: 在 ML 管道中使用自动化 ML (Python)
+          displayName: machine learning automl
+          href: how-to-use-automlstep-in-pipelines.md
         - name: 了解图表和指标
           href: how-to-understand-automated-ml.md
     - name: 跟踪和监视试验
@@ -334,7 +341,7 @@
               displayName: functions app
               href: how-to-deploy-functions.md
             - name: Azure IoT Edge 设备
-              href: /azure/iot-edge/tutorial-deploy-machine-learning?context=azure/machine-learning/service/context/ml-context
+              href: /azure/iot-edge/tutorial-deploy-machine-learning?context=azure/machine-learning/context/ml-context
             - name: FPGA 推理
               href: how-to-deploy-fpga-web-service.md
             - name: 自定义 Docker 映像
@@ -375,7 +382,10 @@
           href: how-to-debug-pipelines-application-insights.md
         - name: 用于 CI/CD 的 Azure Pipelines
           displayName: 'continuous, integration, delivery'
-          href: /azure/devops/pipelines/targets/azure-machine-learning?context=azure/machine-learning/service/context/ml-context
+          href: /azure/devops/pipelines/targets/azure-machine-learning?context=azure/machine-learning/context/ml-context
+        - name: 设计器转换数据
+          displayName: pipeline
+          href: how-to-designer-transform-data.md
         - name: 在设计器中使用已发布的管道重新训练
           displayName: 'retrain, designer, published pipeline'
           href: how-to-retrain-designer.md
@@ -391,6 +401,9 @@
         - name: 对并行运行步骤进行调试和故障排除
           displayName: debug_batch consume pipeline parallelrunstep inference
           href: how-to-debug-parallel-run-step.md
+        - name: 迭代和发展机器学习管道
+          displayName: modularizing testing
+          href: concept-pipeline-practices-tips.md
     - name: 管理资源配额
       displayName: limits
       href: how-to-manage-quotas.md
@@ -441,7 +454,7 @@
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-machine-learning-service'
     - name: 比较我们的 ML 产品
-      href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure/machine-learning/service/context/ml-context
+      href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure/machine-learning/context/ml-context
     - name: Workbench 发生了什么情况
       displayName: 'desktop, ui, Workbench, upgrade, update, transfer'
       href: overview-what-happened-to-workbench.md
