--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -171,7 +171,7 @@
     - name: Azure 澳大利亚
       tocHref: /azure/azure-australia/
       topicHref: /azure/azure-australia/
-    - name: Azure Government
+    - name: 'Azure Government '
       tocHref: /azure/azure-government/
       topicHref: /azure/azure-government/
     - name: Azure 德国
@@ -180,6 +180,9 @@
     - name: Azure NetApp 文件
       tocHref: /azure/azure-netapp-files/
       topicHref: /azure/azure-netapp-files/
+    - name: Azure VMware 解决方案
+      tocHref: /azure/azure-vmware/
+      topicHref: /azure/azure-vmware/
     - name: Azure VMware Solution by CloudSimple
       tocHref: /azure/vmware-cloudsimple/
       topicHref: /azure/vmware-cloudsimple/
