commit translated contents

--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -125,6 +125,10 @@
           href: functions-reference-python.md
         - name: TypeScript
           href: 'functions-reference-node.md#typescript'
+    - name: 安全性
+      items:
+        - name: 安全基线
+          href: security-baseline.md
     - name: 诊断
       href: functions-diagnostics.md
     - name: 消耗计划成本
@@ -477,7 +481,7 @@
       href: 'https://www.youtube.com/c/AzureFunctions'
     - name: MSDN 论坛
       href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureFunctions'
-    - name: 堆栈溢出
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-functions'
     - name: Twitter
       href: 'https://twitter.com/azurefunctions'
