--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: b52a66e23e7f1f0324655146d62a56873cfc5eef
-  ms.sourcegitcommit: 849bb1729b89d075eed579aa36395bf4d29f3bd9
+  ms.openlocfilehash: 2cc8369c59905e1d1e1b794b8cbdefce1ede0a67
+  ms.sourcegitcommit: d9cd51c3a7ac46f256db575c1dfe1303b6460d04
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/28/2020
-  ms.locfileid: "82182406"
+  ms.lasthandoff: 05/04/2020
+  ms.locfileid: "82739411"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -443,12 +443,12 @@ productDirectory:
     - compute
     - web
     url: spring-cloud/index.yml
-  - title: Azure VMware Solution by CloudSimple
+  - title: Azure VMware 解决方案
     summary: 在 Azure 上以原生方式运行 VMware 工作负载
-    imageSrc: ./media/index/cs_dedicatedcloudnode.svg
+    imageSrc: ./media/index/azure-vmware.svg
     azureCategories:
     - compute
-    url: vmware-cloudsimple/index.md
+    url: azure-vmware/index.yml
   - title: Batch
     summary: 云规模的作业计划和计算管理
     imageSrc: https://static.docs.com/ui/media/product/azure/batch-accounts.svg
@@ -1267,7 +1267,7 @@ additionalContent:
   sections:
   - title: 主权云
     items:
-    - title: Azure Government
+    - title: 'Azure Government '
       summary: 适用于美国政府机构及其合作伙伴的专用云。
       url: azure-government/index.yml
     - title: Azure 德国
