--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -63,6 +63,9 @@
       href: samples-powershell.md
     - name: 资源管理器模板
       href: samples-resource-manager-templates.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 应用服务计划
