--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -107,6 +107,9 @@
           href: storage-samples-blobs-powershell.md
         - name: Azure CLI
           href: storage-samples-blobs-cli.md
+        - name: Azure Policy 内置策略定义
+          displayName: 'samples, policies, definitions'
+          href: ../common/policy-samples.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: 概念
       items:
         - name: 存储帐户
@@ -651,6 +654,11 @@
           href: data-lake-storage-tutorial-extract-transform-load-hive.md
         - name: 使用事件网格将数据插入 Databricks Delta 表中
           href: data-lake-storage-events.md
+    - name: 示例
+      items:
+        - name: Azure Policy 内置策略定义
+          displayName: 'samples, policies, definitions'
+          href: ../common/policy-samples.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: 概念
       items:
         - name: 处理大数据
