--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -138,6 +138,9 @@
               items:
                 - name: Azure Monitor
                   href: ./../scripts/virtual-machines-windows-cli-sample-create-vm-oms.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ../policy-samples.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
 - name: 概念
   items:
     - name: 映像
