--- a/articles/data-lake-analytics/TOC.yml
+++ b/articles/data-lake-analytics/TOC.yml
@@ -16,6 +16,11 @@
       href: data-lake-analytics-get-started-powershell.md
     - name: Azure CLI
       href: data-lake-analytics-get-started-cli.md
+- name: 示例
+  items:
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-samples.md
 - name: 如何
   items:
     - name: 管理 Data Lake Analytics
@@ -164,7 +169,7 @@
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: 服务更新
       href: 'https://azure.microsoft.com/updates/?product=data-lake-analytics'
-    - name: 堆栈溢出
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-data-lake'
     - name: 视频
       href: 'https://azure.microsoft.com/resources/videos/index/?services=data-lake-analytics'
