--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -60,6 +60,8 @@
           href: search-semi-structured-data.md
         - name: 为多个 Azure 数据源编制索引
           href: tutorial-multiple-data-sources.md
+    - name: 为任意数据编制索引
+      href: tutorial-optimize-indexing-push-api.md
     - name: 使用 AI 创建内容
       items:
         - name: 'C#'
@@ -82,6 +84,9 @@
       href: 'https://docs.microsoft.com/samples/browse/?products=azure-cognitive-search&languages=python'
     - name: REST 示例
       href: 'https://docs.microsoft.com/samples/browse/?products=azure-cognitive-search&languages=rest'
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 全文搜索
