commit translated contents

--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -68,6 +68,9 @@
       href: sample-scripts-azure-cli.md
     - name: Java 连接池
       href: sample-scripts-java-connection-pooling.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 数据库和服务器
