--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -36,6 +36,11 @@
       href: spring-cloud-tutorial-custom-domain.md
     - name: 使用 IntelliJ 部署 Azure Spring Cloud 应用程序
       href: spring-cloud-tutorial-intellij-deploy-apps.md
+- name: 示例
+  items:
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 了解 Azure Spring Cloud 配额和限制
