commit translated contents

--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -45,10 +45,10 @@
               href: data-box-gateway-connect-powershell-interface.md
         - name: 监视
           href: data-box-gateway-monitor.md
-        - name: 疑难解答
+        - name: 故障排除
           href: data-box-gateway-troubleshoot.md
         - name: 请联系 Microsoft 支持部门
-          href: data-box-edge-contact-microsoft-support.md
+          href: azure-stack-edge-contact-microsoft-support.md
     - name: 发行说明
       items:
         - name: 1911 - 最新版
@@ -64,59 +64,59 @@
     - name: 概述
       items:
         - name: 什么是 Azure Stack Edge？
-          href: data-box-edge-overview.md
+          href: azure-stack-edge-overview.md
     - name: 教程
       items:
         - name: 1 - 准备
-          href: data-box-edge-deploy-prep.md
+          href: azure-stack-edge-deploy-prep.md
         - name: 2 - 安装
-          href: data-box-edge-deploy-install.md
+          href: azure-stack-edge-deploy-install.md
         - name: 3 - 连接、设置、激活
-          href: data-box-edge-deploy-connect-setup-activate.md
+          href: azure-stack-edge-deploy-connect-setup-activate.md
         - name: 4 - 添加、连接到共享
-          href: data-box-edge-deploy-add-shares.md
+          href: azure-stack-edge-deploy-add-shares.md
         - name: 5A - 配置计算（简单）
-          href: data-box-edge-deploy-configure-compute.md
+          href: azure-stack-edge-deploy-configure-compute.md
         - name: 5B - 配置计算（高级）
-          href: data-box-edge-deploy-configure-compute-advanced.md
+          href: azure-stack-edge-deploy-configure-compute-advanced.md
     - name: 概念
       items:
         - name: 审查要求
-          href: data-box-edge-system-requirements.md
+          href: azure-stack-edge-system-requirements.md
         - name: 了解限制
-          href: data-box-edge-limits.md
+          href: azure-stack-edge-limits.md
         - name: 安全概述
-          href: data-box-edge-security.md
+          href: azure-stack-edge-security.md
         - name: 查看规范
-          href: data-box-edge-technical-specifications-compliance.md
+          href: azure-stack-edge-technical-specifications-compliance.md
     - name: 如何
       items:
         - name: '开发 C# 模块'
-          href: data-box-edge-create-iot-edge-module.md
+          href: azure-stack-edge-create-iot-edge-module.md
         - name: 管理
           items:
             - name: Edge 计算
-              href: data-box-edge-manage-compute.md
+              href: azure-stack-edge-manage-compute.md
             - name: Edge 计算网络
-              href: data-box-edge-extend-compute-access-modules.md
+              href: azure-stack-edge-extend-compute-access-modules.md
             - name: 共享
-              href: data-box-edge-manage-shares.md
+              href: azure-stack-edge-manage-shares.md
             - name: 用户
-              href: data-box-edge-manage-users.md
+              href: azure-stack-edge-manage-users.md
             - name: 带宽计划
-              href: data-box-edge-manage-bandwidth-schedules.md
+              href: azure-stack-edge-manage-bandwidth-schedules.md
             - name: 电源、访问权限和连接
-              href: data-box-edge-manage-access-power-connectivity-mode.md
+              href: azure-stack-edge-manage-access-power-connectivity-mode.md
             - name: 通过 PowerShell
-              href: data-box-edge-connect-powershell-interface.md
-        - name: 疑难解答
-          href: data-box-edge-troubleshoot.md
+              href: azure-stack-edge-connect-powershell-interface.md
+        - name: 故障排除
+          href: azure-stack-edge-troubleshoot.md
         - name: 请联系 Microsoft 支持部门
-          href: data-box-edge-contact-microsoft-support.md
+          href: azure-stack-edge-contact-microsoft-support.md
         - name: 监视
-          href: data-box-edge-monitor.md
+          href: azure-stack-edge-monitor.md
         - name: 返回或替换设备
-          href: data-box-edge-return-device.md
+          href: azure-stack-edge-return-device.md
     - name: 发行说明
       items:
         - name: 1911 - 最新版
