--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -44,6 +44,11 @@
           href: tutorial-sap-hana-restore-cli.md
         - name: 管理已备份的 SQL Server 数据库 - CLI
           href: tutorial-sap-hana-manage-cli.md
+- name: 示例
+  items:
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 支持矩阵
@@ -342,10 +347,18 @@
           href: security-overview.md
         - name: 基于角色的访问控制
           href: backup-rbac-rs-vault.md
-        - name: 云工作负荷的安全性
-          href: backup-azure-security-feature-cloud.md
+        - name: 软删除
+          items:
+            - name: 概述
+              href: backup-azure-security-feature-cloud.md
+            - name: 对于虚拟机
+              href: soft-delete-virtual-machines.md
+            - name: 对于 Azure VM 中的 SQL Server 和 SAP HANA
+              href: soft-delete-sql-saphana-in-azure-vm.md
         - name: 混合备份的安全性
           href: backup-azure-security-feature.md
+        - name: 加密
+          href: backup-encryption.md
         - name: 内置安全控件
           href: backup-security-controls.md
         - name: 安全基线
