--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -206,13 +206,15 @@
           href: ../connectors/connectors-create-api-bingsearch.md
         - name: Box
           href: ../connectors/connectors-create-api-box.md
+        - name: Common Data Service
+          href: ../connectors/connect-common-data-service.md
         - name: 自定义 API 和 Web 应用
           href: logic-apps-create-api-app.md
         - name: 延迟
           href: ../connectors/connectors-native-delay.md
         - name: Dropbox
           href: ../connectors/connectors-create-api-dropbox.md
-        - name: Dynamics 365 CRM Online
+        - name: Dynamics 365
           href: ../connectors/connectors-create-api-crmonline.md
         - name: EDIFACT
           href: logic-apps-enterprise-integration-edifact.md
